<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtConfiguracionIdioma"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIdiomaEspañol"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="50dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="btnEspagnolClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnIdiomaIngles"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/button2"
        android:onClick="btnInglesClick"/>

</RelativeLayout>