<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.kcobos.brujulavoz.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgCompass"
        android:src="@drawable/fondo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/descFondo" />

    <ImageView
        android:id="@+id/imgDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/descriptionImg"
        android:src="@drawable/flecha"
        android:visibility="invisible" />

    <ListView
        android:layout_width="wrap_content"
        android:id="@+id/listaReconocidos"
        android:layout_alignParentStart="true"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnEmpezar"
        android:layout_below="@+id/imgDireccion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtn"
        android:id="@+id/btnEmpezar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
